updated the problem statement for number 1 and 2

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ code {
 #root, body{
   overflow-y: hidden;
 }
+
+.problem-container {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
