block view css issue fixed

--- a/src/components/BlockView/blockView.css
+++ b/src/components/BlockView/blockView.css
@@ -18,11 +18,11 @@
 
     .block-view-container{
         height: calc(100vh);
-        margin-top: 23px;
         width: 100%;
         display: flex;
         justify-content: center;
-        align-items: start;
+        align-items: center;
+        vertical-align: middle;
     }
 
     .block {
