--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,9 @@ code {
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 600px) {
+  .problem-container{
+    margin-top: 100px;
+  }
+}
